--- a/website/index.html
+++ b/website/index.html
@@ -11,7 +11,10 @@
 			<header>
 				<h1>Das ist die Kopfzeile</h1>
 			</header>
-			<section>Das ist der MainContent</section>
+			<section>
+				test
+				
+			</section>
 			<aside>
 				<input type="text" id="search_claims" name="search_claims" value="search"> 
 				<button type="button" onclick="table_claims()">submit</button>
